Fix modal not covering the entire screen issue

--- a/ashes/src/less/layout/_site.less
+++ b/ashes/src/less/layout/_site.less
@@ -11,7 +11,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    z-index: 1;
     overflow: hidden;
 
     .fc-main {
@@ -21,7 +20,6 @@
       border-top: 1px solid @color-header-border;
       margin-top: 60px;
       margin-left: 206px;
-      z-index: 1;
 
       > * {
         flex: 1;
