--- a/ashes/src/less/modules/_side-bar.less
+++ b/ashes/src/less/modules/_side-bar.less
@@ -3,7 +3,7 @@
 
 .fc-sidebar {
   margin-top: 60px;
-  z-index: 1;
+  z-index: 3;
 
   &__control {
     display: flex;
